Add cropped and compressed versions of profile photos of committee members to reduce page load time, adjust margins, fix misplaced head/body tags, reformat HTML

--- a/2025/main.css
+++ b/2025/main.css
@@ -123,11 +123,19 @@ body {
     font-size: 16px;
     font-weight: bold;
     text-align: center;
-    margin-top: 15px; /* Adds space between image and text */
+    margin: 3px 0; /* Adds space between image and text */
     width: 200px; /* Same width as images for consistent alignment */
     font-family: 'Poppins', sans-serif;
-    white-space: nowrap; /* Prevents text from wrapping to the next line */
+    font-weight: 400;
+    /* white-space: nowrap;  Prevents text from wrapping to the next line */
+}
 
+.chairs p.name {
+    font-weight: bold;
+}
+
+.chairs img {
+    margin-bottom: 10px;
 }
 
 /* Category header style */
